# bbbs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev.yaml  fixtures.json  fixtures_by_factory_boy.json  fixtures_docker.json  local.yaml  production.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  staging.yaml
.envs example/.local/: .django  .postgres
.envs example/.prod/: .django  .postgres  .swag
.envs_example/.local/: .django  .postgres
.github/workflows/: build_and_deploy.yaml  build_and_deploy.yml  codestyle.yaml  codestyle.yml  prod_deploy.yaml  run_test.yml  staging_deploy.yaml  tests.yml  tests_and_coverage.yml  tests_and_coverage_on_PR.yaml
afisha/: admin.py  apps.py  factories.py  filters.py  fixtures.py  models.py  serializers.py  urls.py  views.py
afisha/migrations/: 0001_initial.py  0002_auto_20210518_1922.py  0002_auto_20210520_2152.py  0002_auto_20210524_2038.py  0002_auto_20210526_1740.py  0002_initial.py  0002_remove_event_booked.py  0003_alter_event_seats.py  0003_alter_eventparticipant_user.py  0003_auto_20210526_1947.py  0003_auto_20210709_2008.py  0004_alter_eventparticipant_user.py  0004_auto_20210527_2348.py  0004_rename_startat_event_start_at.py  0005_alter_event_title.py
afisha/tests/: test_models.py  test_urls.py  (+1 more)
bbbs/: settings.py  urls.py
common/: admin.py  apps.py  exceptions.py  factories.py  filters.py  fixtures.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
config/: asgi.py  urls.py  wsgi.py
entertainment/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
main/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
nginx/: default.conf
places/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
questions/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
requirements/: base.txt  dev.txt  local.txt  prod.txt
rights/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
story/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  backends.py  factories.py  mixins.py  models.py  permissions.py  sendmail.py  serializers.py  urls.py  utils.py  views.py
(+267 files in other folders)
