[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | tox
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | tests
    | config/settings
  )/
)
'''
[tool.poetry]
name = "bbbs"
version = "0.1.0"
description = "Бэкенд для проекта \"Старшие Братья Старшие Сестры\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-colorfield = "^0.4.1"
django-filter = "^2.4.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.1"
drf-spectacular = "^0.17.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"
python-environ = "^0.4.54"
django-debug-toolbar = "^3.2.1"
factory-boy = "^3.2.0"
isort = "^5.8.0"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest-django = "^4.4.0"
django-coverage-plugin = "^2.0.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
