[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | config/settings
  )/
)
'''

[tool.poetry]
name = "bbbs"
version = "0.1.0"
description = "Бэкенд для проекта \"Старшие Братья Старшие Сестры\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-colorfield = "^0.4.1"
django-filter = "^2.4.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.1"
Pillow = "^8.2.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
python-environ = "^0.4.54"
drf-yasg = "^1.20.0"
django-cors-headers = "^3.7.0"
factory-boy = "^3.2.0"
freezegun = "^1.1.0"
django-rest-passwordreset = "^1.2.0"
mailjet-rest = "^1.3.4"
django-anymail = {extras = ["mailjet"], version = "^8.4"}

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.1"
isort = "^5.8.0"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest-django = "^4.4.0"
django-coverage-plugin = "^2.0.0"
pre-commit = "^2.13.0"
ipython = "^7.24.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
